VERIFIED FIXED 25610
[GTK] text.caretOffset is reportedly always 0
https://bugs.webkit.org/show_bug.cgi?id=25610
Summary [GTK] text.caretOffset is reportedly always 0
Joanmarie Diggs
Reported 2009-05-06 23:54:34 PDT
Steps to reproduce: 1. With caret browsing enabled, position the caret within some text. 2. Using Accerciser, select the accessible which contains that text. 3. In Accerciser's IPython console, type: acc.queryText().caretOffset Expected result: The offset of the caret would be returned. Actual result: 0 is always returned. Xan, this one somehow escaped my notice. Sorry! Would it be possible for this one to be moved towards the top of your list? (I suspect/hope it's an easy one.) Thanks!
Attachments
caretoffset.patch (2.42 KB, patch)
2009-05-07 05:28 PDT, Xan Lopez
gustavo: review+
Xan Lopez
Comment 1 2009-05-07 05:28:08 PDT
Created attachment 30095 [details] caretoffset.patch Correctly implement the get_caret_offset function.
Gustavo Noronha (kov)
Comment 2 2009-05-07 05:31:55 PDT
Comment on attachment 30095 [details] caretoffset.patch Looks good!
Xan Lopez
Comment 3 2009-05-07 05:36:33 PDT
Landed as r43342, closing.
Joanmarie Diggs
Comment 4 2009-07-27 14:30:37 PDT
Verifying. Thanks!
Note You need to log in before you can comment on or make changes to this bug.