2009-05-07  Xan Lopez  <xlopez@igalia.com>

Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=25610
        [GTK] text.caretOffset is reportedly always 0

        Use the right function to get the caret offset in an
        element. selectionStart() would only work for text
        controls (there's even an ASSERT when calculating the selected
        text range). Instead just get the selection and get the offset of
        the start position.

        * page/gtk/AccessibilityObjectWrapperAtk.cpp:

Canonical link: https://commits.webkit.org/35365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43342 268f45cc-cd09-0410-ab3c-d52691b4dbfc